# ipycmc-jupyter-extension

./: .gitignore  MANIFEST.in  README.md  appveyor.yml  codecov.yml  install.json  ipycmc_jupyter_extension.json  package.json  pyproject.toml  pytest.ini  setup.py  webpack.config.js
docs/source/: conf.py  develop-install.rst  index.rst  installing.rst
ipycmc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ipycmc_jupyter_extension/: _frontend.py
ipycmc_jupyter_extension/nbextension/: __init__.py
ipycmc_jupyter_extension/tests/: test_nbextension_path.py
lib/: extension.js  extension.js.map  index.js  index.js.map  plot.d.ts  plot.js  plot.js.map  plugin.js  plugin.js.map  version.js  version.js.map  widget.d.ts  widget.js  widget.js.map
src/: extension.ts  plot.ts  plugin.ts
